nyelv.output
Terminals unused in grammar

   "||"
   "&&"
   "=="
   "!="
   ">="
   "<="
   "++"
   "--"


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT_INT
    3                   | CONSTANT_FRAC
    4                   | STRING_LITERAL
    5                   | '(' expression ')'

    6 postfix_expression: primary_expression
    7                   | postfix_expression '[' expression ']'
    8                   | postfix_expression '(' ')'
    9                   | postfix_expression '(' argument_expression_list ')'
   10                   | postfix_expression '.' IDENTIFIER
   11                   | postfix_expression INCREMENT
   12                   | postfix_expression DECREMENT
   13                   | '(' type_name ')' '{' initializer_list '}'

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list ',' assignment_expression

   16 unary_expression: postfix_expression
   17                 | INCREMENT unary_expression
   18                 | DECREMENT unary_expression
   19                 | unary_operator cast_expression
   20                 | SIZEOF unary_expression
   21                 | SIZEOF '(' type_name ')'

   22 unary_operator: '&'
   23               | '*'
   24               | '+'
   25               | '-'
   26               | '~'
   27               | '!'

   28 cast_expression: unary_expression
   29                | '(' type_name ')' cast_expression

   30 multiplicative_expression: cast_expression
   31                          | multiplicative_expression '*' cast_expression
   32                          | multiplicative_expression '/' cast_expression
   33                          | multiplicative_expression '%' cast_expression

   34 additive_expression: multiplicative_expression
   35                    | additive_expression '+' multiplicative_expression
   36                    | additive_expression '-' multiplicative_expression

   37 shift_expression: additive_expression
   38                 | shift_expression SHIFT_LEFT additive_expression
   39                 | shift_expression SHIFT_RIGHT additive_expression

   40 relational_expression: shift_expression
   41                      | relational_expression '<' shift_expression
   42                      | relational_expression '>' shift_expression
   43                      | relational_expression LESS_OR_EQUAL shift_expression
   44                      | relational_expression GREATER_OR_EQUAL shift_expression

   45 equality_expression: relational_expression
   46                    | equality_expression EQUAL relational_expression
   47                    | equality_expression NOT_EQUAL relational_expression

   48 and_expression: equality_expression
   49               | and_expression '&' equality_expression

   50 exclusive_or_expression: and_expression
   51                        | exclusive_or_expression '^' and_expression

   52 inclusive_or_expression: exclusive_or_expression
   53                        | inclusive_or_expression '|' exclusive_or_expression

   54 logical_and_expression: inclusive_or_expression
   55                       | logical_and_expression AND inclusive_or_expression

   56 logical_or_expression: logical_and_expression
   57                      | logical_or_expression OR logical_and_expression

   58 conditional_expression: logical_or_expression
   59                       | logical_or_expression '?' expression ':' conditional_expression

   60 assignment_expression: conditional_expression
   61                      | unary_expression assignment_operator assignment_expression

   62 assignment_operator: '='
   63                    | MUL_ASSIGN
   64                    | DIV_ASSIGN
   65                    | MOD_ASSIGN
   66                    | ADD_ASSIGN
   67                    | SUB_ASSIGN
   68                    | LEFT_ASSIGN
   69                    | RIGHT_ASSIGN
   70                    | AND_ASSIGN
   71                    | XOR_ASSIGN
   72                    | OR_ASSIGN

   73 expression: assignment_expression
   74           | expression ',' assignment_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: type_specifier
   78                       | type_specifier declaration_specifiers

   79 init_declarator_list: init_declarator
   80                     | init_declarator_list ',' init_declarator

   81 init_declarator: declarator
   82                | declarator '=' initializer

   83 type_specifier: VOID
   84               | CHAR
   85               | INT
   86               | LONG
   87               | FLOAT
   88               | DOUBLE
   89               | TYPE_NAME

   90 specifier_qualifier_list: type_specifier specifier_qualifier_list
   91                         | type_specifier

   92 declarator: direct_declarator

   93 direct_declarator: IDENTIFIER
   94                  | '(' declarator ')'
   95                  | direct_declarator '[' assignment_expression ']'
   96                  | direct_declarator '[' ']'
   97                  | direct_declarator '(' parameter_type_list ')'
   98                  | direct_declarator '(' identifier_list ')'
   99                  | direct_declarator '(' ')'

  100 parameter_type_list: parameter_list

  101 parameter_list: parameter_declaration
  102               | parameter_list ',' parameter_declaration

  103 parameter_declaration: declaration_specifiers declarator
  104                      | declaration_specifiers abstract_declarator
  105                      | declaration_specifiers

  106 identifier_list: IDENTIFIER
  107                | identifier_list ',' IDENTIFIER

  108 type_name: specifier_qualifier_list
  109          | specifier_qualifier_list abstract_declarator

  110 abstract_declarator: '(' abstract_declarator ')'
  111                    | '[' ']'
  112                    | '[' assignment_expression ']'
  113                    | abstract_declarator '[' ']'
  114                    | abstract_declarator '[' assignment_expression ']'
  115                    | '(' ')'
  116                    | '(' parameter_type_list ')'
  117                    | abstract_declarator '(' ')'
  118                    | abstract_declarator '(' parameter_type_list ')'

  119 initializer: assignment_expression
  120            | '{' initializer_list '}'
  121            | '{' initializer_list ',' '}'

  122 initializer_list: initializer
  123                 | designation initializer
  124                 | initializer_list ',' initializer
  125                 | initializer_list ',' designation initializer

  126 designation: designator_list '='

  127 designator_list: designator
  128                | designator_list designator

  129 designator: '[' conditional_expression ']'
  130           | '.' IDENTIFIER

  131 statement: labeled_statement
  132          | compound_statement
  133          | expression_statement
  134          | selection_statement
  135          | iteration_statement
  136          | jump_statement

  137 labeled_statement: CASE conditional_expression ':' statement
  138                  | DEFAULT ':' statement

  139 compound_statement: '{' '}'
  140                   | '{' block_item_list '}'

  141 block_item_list: block_item
  142                | block_item_list block_item

  143 block_item: error ';'
  144           | declaration
  145           | statement

  146 expression_statement: ';'
  147                     | expression ';'

  148 selection_statement: IF '(' expression ')' statement
  149                    | IF_WITH_ELSE '(' expression ')' statement ELSE statement
  150                    | SWITCH '(' expression ')' statement

  151 iteration_statement: WHILE '(' expression ')' statement
  152                    | DO statement WHILE '(' expression ')' ';'
  153                    | FOR '(' expression_statement expression_statement expression ')' statement

  154 jump_statement: CONTINUE ';'
  155               | BREAK ';'
  156               | RETURN ';'
  157               | RETURN expression ';'

  158 translation_unit: external_declaration
  159                 | translation_unit external_declaration

  160 external_declaration: function_definition
  161                     | declaration

  162 function_definition: declaration_specifiers declarator declaration_list compound_statement
  163                    | declaration_specifiers declarator compound_statement

  164 declaration_list: declaration
  165                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 27
'%' (37) 33
'&' (38) 22 49
'(' (40) 5 8 9 13 21 29 94 97 98 99 110 115 116 117 118 148 149 150
    151 152 153
')' (41) 5 8 9 13 21 29 94 97 98 99 110 115 116 117 118 148 149 150
    151 152 153
'*' (42) 23 31
'+' (43) 24 35
',' (44) 15 74 80 102 107 121 124 125
'-' (45) 25 36
'.' (46) 10 130
'/' (47) 32
':' (58) 59 137 138
';' (59) 75 76 143 146 147 152 154 155 156 157
'<' (60) 41
'=' (61) 62 82 126
'>' (62) 42
'?' (63) 59
'[' (91) 7 95 96 111 112 113 114 129
']' (93) 7 95 96 111 112 113 114 129
'^' (94) 51
'{' (123) 13 120 121 139 140
'|' (124) 53
'}' (125) 13 120 121 139 140
'~' (126) 26
error (256) 143
TYPE_NAME (258) 89
IDENTIFIER (259) 1 10 93 106 107 130
CONSTANT_INT (260) 2
CONSTANT_FRAC (261) 3
STRING_LITERAL (262) 4
INCREMENT (263) 11 17
DECREMENT (264) 12 18
SHIFT_LEFT (265) 38
SHIFT_RIGHT (266) 39
LESS_OR_EQUAL (267) 43
GREATER_OR_EQUAL (268) 44
EQUAL (269) 46
NOT_EQUAL (270) 47
AND (271) 55
OR (272) 57
MUL_ASSIGN (273) 63
DIV_ASSIGN (274) 64
MOD_ASSIGN (275) 65
ADD_ASSIGN (276) 66
SUB_ASSIGN (277) 67
LEFT_ASSIGN (278) 68
RIGHT_ASSIGN (279) 69
AND_ASSIGN (280) 70
XOR_ASSIGN (281) 71
OR_ASSIGN (282) 72
CHAR (283) 84
INT (284) 85
LONG (285) 86
FLOAT (286) 87
DOUBLE (287) 88
VOID (288) 83
SIZEOF (289) 20 21
CASE (290) 137
DEFAULT (291) 138
IF (292) 148
IF_WITH_ELSE (293) 149
ELSE (294) 149
SWITCH (295) 150
WHILE (296) 151 152
DO (297) 152
FOR (298) 153
CONTINUE (299) 154
BREAK (300) 155
RETURN (301) 156 157
"||" (302)
"&&" (303)
"==" (304)
"!=" (305)
">=" (306)
"<=" (307)
"++" (308)
"--" (309)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
primary_expression (80)
    on left: 1 2 3 4 5, on right: 6
postfix_expression (81)
    on left: 6 7 8 9 10 11 12 13, on right: 7 8 9 10 11 12 16
argument_expression_list (82)
    on left: 14 15, on right: 9 15
unary_expression (83)
    on left: 16 17 18 19 20 21, on right: 17 18 20 28 61
unary_operator (84)
    on left: 22 23 24 25 26 27, on right: 19
cast_expression (85)
    on left: 28 29, on right: 19 29 30 31 32 33
multiplicative_expression (86)
    on left: 30 31 32 33, on right: 31 32 33 34 35 36
additive_expression (87)
    on left: 34 35 36, on right: 35 36 37 38 39
shift_expression (88)
    on left: 37 38 39, on right: 38 39 40 41 42 43 44
relational_expression (89)
    on left: 40 41 42 43 44, on right: 41 42 43 44 45 46 47
equality_expression (90)
    on left: 45 46 47, on right: 46 47 48 49
and_expression (91)
    on left: 48 49, on right: 49 50 51
exclusive_or_expression (92)
    on left: 50 51, on right: 51 52 53
inclusive_or_expression (93)
    on left: 52 53, on right: 53 54 55
logical_and_expression (94)
    on left: 54 55, on right: 55 56 57
logical_or_expression (95)
    on left: 56 57, on right: 57 58 59
conditional_expression (96)
    on left: 58 59, on right: 59 60 129 137
assignment_expression (97)
    on left: 60 61, on right: 14 15 61 73 74 95 112 114 119
assignment_operator (98)
    on left: 62 63 64 65 66 67 68 69 70 71 72, on right: 61
expression (99)
    on left: 73 74, on right: 5 7 59 74 147 148 149 150 151 152 153
    157
declaration (100)
    on left: 75 76, on right: 144 161 164 165
declaration_specifiers (101)
    on left: 77 78, on right: 75 76 78 103 104 105 162 163
init_declarator_list (102)
    on left: 79 80, on right: 76 80
init_declarator (103)
    on left: 81 82, on right: 79 80
type_specifier (104)
    on left: 83 84 85 86 87 88 89, on right: 77 78 90 91
specifier_qualifier_list (105)
    on left: 90 91, on right: 90 108 109
declarator (106)
    on left: 92, on right: 81 82 94 103 162 163
direct_declarator (107)
    on left: 93 94 95 96 97 98 99, on right: 92 95 96 97 98 99
parameter_type_list (108)
    on left: 100, on right: 97 116 118
parameter_list (109)
    on left: 101 102, on right: 100 102
parameter_declaration (110)
    on left: 103 104 105, on right: 101 102
identifier_list (111)
    on left: 106 107, on right: 98 107
type_name (112)
    on left: 108 109, on right: 13 21 29
abstract_declarator (113)
    on left: 110 111 112 113 114 115 116 117 118, on right: 104 109
    110 113 114 117 118
initializer (114)
    on left: 119 120 121, on right: 82 122 123 124 125
initializer_list (115)
    on left: 122 123 124 125, on right: 13 120 121 124 125
designation (116)
    on left: 126, on right: 123 125
designator_list (117)
    on left: 127 128, on right: 126 128
designator (118)
    on left: 129 130, on right: 127 128
statement (119)
    on left: 131 132 133 134 135 136, on right: 137 138 145 148 149
    150 151 152 153
labeled_statement (120)
    on left: 137 138, on right: 131
compound_statement (121)
    on left: 139 140, on right: 132 162 163
block_item_list (122)
    on left: 141 142, on right: 140 142
block_item (123)
    on left: 143 144 145, on right: 141 142
expression_statement (124)
    on left: 146 147, on right: 133 153
selection_statement (125)
    on left: 148 149 150, on right: 134
iteration_statement (126)
    on left: 151 152 153, on right: 135
jump_statement (127)
    on left: 154 155 156 157, on right: 136
translation_unit (128)
    on left: 158 159, on right: 0 159
external_declaration (129)
    on left: 160 161, on right: 158 159
function_definition (130)
    on left: 162 163, on right: 160
declaration_list (131)
    on left: 164 165, on right: 162 165


state 0

    0 $accept: . translation_unit $end

    TYPE_NAME  shift, and go to state 1
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    FLOAT      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    VOID       shift, and go to state 7

    declaration             go to state 8
    declaration_specifiers  go to state 9
    type_specifier          go to state 10
    translation_unit        go to state 11
    external_declaration    go to state 12
    function_definition     go to state 13


state 1

   89 type_specifier: TYPE_NAME .

    $default  reduce using rule 89 (type_specifier)


state 2

   84 type_specifier: CHAR .

    $default  reduce using rule 84 (type_specifier)


state 3

   85 type_specifier: INT .

    $default  reduce using rule 85 (type_specifier)


state 4

   86 type_specifier: LONG .

    $default  reduce using rule 86 (type_specifier)


state 5

   87 type_specifier: FLOAT .

    $default  reduce using rule 87 (type_specifier)


state 6

   88 type_specifier: DOUBLE .

    $default  reduce using rule 88 (type_specifier)


state 7

   83 type_specifier: VOID .

    $default  reduce using rule 83 (type_specifier)


state 8

  161 external_declaration: declaration .

    $default  reduce using rule 161 (external_declaration)


state 9

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  162 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  163                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 14
    '('         shift, and go to state 15
    ';'         shift, and go to state 16

    init_declarator_list  go to state 17
    init_declarator       go to state 18
    declarator            go to state 19
    direct_declarator     go to state 20


state 10

   77 declaration_specifiers: type_specifier .
   78                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    FLOAT      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    VOID       shift, and go to state 7

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers  go to state 21
    type_specifier          go to state 10


state 11

    0 $accept: translation_unit . $end
  159 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 22
    TYPE_NAME  shift, and go to state 1
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    FLOAT      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    VOID       shift, and go to state 7

    declaration             go to state 8
    declaration_specifiers  go to state 9
    type_specifier          go to state 10
    external_declaration    go to state 23
    function_definition     go to state 13


state 12

  158 translation_unit: external_declaration .

    $default  reduce using rule 158 (translation_unit)


state 13

  160 external_declaration: function_definition .

    $default  reduce using rule 160 (external_declaration)


state 14

   93 direct_declarator: IDENTIFIER .

    $default  reduce using rule 93 (direct_declarator)


state 15

   94 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 14
    '('         shift, and go to state 15

    declarator         go to state 24
    direct_declarator  go to state 20


state 16

   75 declaration: declaration_specifiers ';' .

    $default  reduce using rule 75 (declaration)


state 17

   76 declaration: declaration_specifiers init_declarator_list . ';'
   80 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 25
    ';'  shift, and go to state 26


state 18

   79 init_declarator_list: init_declarator .

    $default  reduce using rule 79 (init_declarator_list)


state 19

   81 init_declarator: declarator .
   82                | declarator . '=' initializer
  162 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  163                    | declaration_specifiers declarator . compound_statement

    TYPE_NAME  shift, and go to state 1
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    FLOAT      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    VOID       shift, and go to state 7
    '='        shift, and go to state 27
    '{'        shift, and go to state 28

    $default  reduce using rule 81 (init_declarator)

    declaration             go to state 29
    declaration_specifiers  go to state 30
    type_specifier          go to state 10
    compound_statement      go to state 31
    declaration_list        go to state 32


state 20

   92 declarator: direct_declarator .
   95 direct_declarator: direct_declarator . '[' assignment_expression ']'
   96                  | direct_declarator . '[' ']'
   97                  | direct_declarator . '(' parameter_type_list ')'
   98                  | direct_declarator . '(' identifier_list ')'
   99                  | direct_declarator . '(' ')'

    '('  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 92 (declarator)


state 21

   78 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 78 (declaration_specifiers)


state 22

    0 $accept: translation_unit $end .

    $default  accept


state 23

  159 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 159 (translation_unit)


state 24

   94 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 35


state 25

   80 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 14
    '('         shift, and go to state 15

    init_declarator    go to state 36
    declarator         go to state 37
    direct_declarator  go to state 20


state 26

   76 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 76 (declaration)


state 27

   82 init_declarator: declarator '=' . initializer

    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    SIZEOF          shift, and go to state 44
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '('             shift, and go to state 49
    '{'             shift, and go to state 50
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 69
    initializer                go to state 70


state 28

  139 compound_statement: '{' . '}'
  140                   | '{' . block_item_list '}'

    error           shift, and go to state 71
    TYPE_NAME       shift, and go to state 1
    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    CHAR            shift, and go to state 2
    INT             shift, and go to state 3
    LONG            shift, and go to state 4
    FLOAT           shift, and go to state 5
    DOUBLE          shift, and go to state 6
    VOID            shift, and go to state 7
    SIZEOF          shift, and go to state 44
    CASE            shift, and go to state 72
    DEFAULT         shift, and go to state 73
    IF              shift, and go to state 74
    IF_WITH_ELSE    shift, and go to state 75
    SWITCH          shift, and go to state 76
    WHILE           shift, and go to state 77
    DO              shift, and go to state 78
    FOR             shift, and go to state 79
    CONTINUE        shift, and go to state 80
    BREAK           shift, and go to state 81
    RETURN          shift, and go to state 82
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '('             shift, and go to state 49
    '{'             shift, and go to state 28
    '}'             shift, and go to state 83
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52
    ';'             shift, and go to state 84

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 85
    expression                 go to state 86
    declaration                go to state 87
    declaration_specifiers     go to state 30
    type_specifier             go to state 10
    statement                  go to state 88
    labeled_statement          go to state 89
    compound_statement         go to state 90
    block_item_list            go to state 91
    block_item                 go to state 92
    expression_statement       go to state 93
    selection_statement        go to state 94
    iteration_statement        go to state 95
    jump_statement             go to state 96


state 29

  164 declaration_list: declaration .

    $default  reduce using rule 164 (declaration_list)


state 30

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 14
    '('         shift, and go to state 15
    ';'         shift, and go to state 16

    init_declarator_list  go to state 17
    init_declarator       go to state 18
    declarator            go to state 37
    direct_declarator     go to state 20


state 31

  163 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 163 (function_definition)


state 32

  162 function_definition: declaration_specifiers declarator declaration_list . compound_statement
  165 declaration_list: declaration_list . declaration

    TYPE_NAME  shift, and go to state 1
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    FLOAT      shift, and go to state 5
    DOUBLE     shift, and go to state 6
    VOID       shift, and go to state 7
    '{'        shift, and go to state 28

    declaration             go to state 97
    declaration_specifiers  go to state 30
    type_specifier          go to state 10
    compound_statement      go to state 98


state 33

   97 direct_declarator: direct_declarator '(' . parameter_type_list ')'
   98                  | direct_declarator '(' . identifier_list ')'
   99                  | direct_declarator '(' . ')'

    TYPE_NAME   shift, and go to state 1
    IDENTIFIER  shift, and go to state 99
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    LONG        shift, and go to state 4
    FLOAT       shift, and go to state 5
    DOUBLE      shift, and go to state 6
    VOID        shift, and go to state 7
    ')'         shift, and go to state 100

    declaration_specifiers  go to state 101
    type_specifier          go to state 10
    parameter_type_list     go to state 102
    parameter_list          go to state 103
    parameter_declaration   go to state 104
    identifier_list         go to state 105


state 34

   95 direct_declarator: direct_declarator '[' . assignment_expression ']'
   96                  | direct_declarator '[' . ']'

    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    SIZEOF          shift, and go to state 44
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '('             shift, and go to state 49
    ']'             shift, and go to state 106
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 107


state 35

   94 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 94 (direct_declarator)


state 36

   80 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 80 (init_declarator_list)


state 37

   81 init_declarator: declarator .
   82                | declarator . '=' initializer

    '='  shift, and go to state 27

    $default  reduce using rule 81 (init_declarator)


state 38

    1 primary_expression: IDENTIFIER .

    $default  reduce using rule 1 (primary_expression)


state 39

    2 primary_expression: CONSTANT_INT .

    $default  reduce using rule 2 (primary_expression)


state 40

    3 primary_expression: CONSTANT_FRAC .

    $default  reduce using rule 3 (primary_expression)


state 41

    4 primary_expression: STRING_LITERAL .

    $default  reduce using rule 4 (primary_expression)


state 42

   17 unary_expression: INCREMENT . unary_expression

    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    SIZEOF          shift, and go to state 44
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '('             shift, and go to state 108
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52

    primary_expression  go to state 53
    postfix_expression  go to state 54
    unary_expression    go to state 109
    unary_operator      go to state 56


state 43

   18 unary_expression: DECREMENT . unary_expression

    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    SIZEOF          shift, and go to state 44
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '('             shift, and go to state 108
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52

    primary_expression  go to state 53
    postfix_expression  go to state 54
    unary_expression    go to state 110
    unary_operator      go to state 56


state 44

   20 unary_expression: SIZEOF . unary_expression
   21                 | SIZEOF . '(' type_name ')'

    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    SIZEOF          shift, and go to state 44
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '('             shift, and go to state 111
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52

    primary_expression  go to state 53
    postfix_expression  go to state 54
    unary_expression    go to state 112
    unary_operator      go to state 56


state 45

   24 unary_operator: '+' .

    $default  reduce using rule 24 (unary_operator)


state 46

   25 unary_operator: '-' .

    $default  reduce using rule 25 (unary_operator)


state 47

   23 unary_operator: '*' .

    $default  reduce using rule 23 (unary_operator)


state 48

   27 unary_operator: '!' .

    $default  reduce using rule 27 (unary_operator)


state 49

    5 primary_expression: '(' . expression ')'
   13 postfix_expression: '(' . type_name ')' '{' initializer_list '}'
   29 cast_expression: '(' . type_name ')' cast_expression

    TYPE_NAME       shift, and go to state 1
    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    CHAR            shift, and go to state 2
    INT             shift, and go to state 3
    LONG            shift, and go to state 4
    FLOAT           shift, and go to state 5
    DOUBLE          shift, and go to state 6
    VOID            shift, and go to state 7
    SIZEOF          shift, and go to state 44
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '('             shift, and go to state 49
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 85
    expression                 go to state 113
    type_specifier             go to state 114
    specifier_qualifier_list   go to state 115
    type_name                  go to state 116


state 50

  120 initializer: '{' . initializer_list '}'
  121            | '{' . initializer_list ',' '}'

    IDENTIFIER      shift, and go to state 38
    CONSTANT_INT    shift, and go to state 39
    CONSTANT_FRAC   shift, and go to state 40
    STRING_LITERAL  shift, and go to state 41
    INCREMENT       shift, and go to state 42
    DECREMENT       shift, and go to state 43
    SIZEOF          shift, and go to state 44
    '+'             shift, and go to state 45
    '-'             shift, and go to state 46
    '*'             shift, and go to state 47
    '!'             shift, and go to state 48
    '.'             shift, and go to state 117
    '('             shift, and go to state 49
    '['             shift, and go to state 118
    '{'             shift, and go to state 50
    '&'             shift, and go to state 51
    '~'             shift, and go to state 52

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 69
    initializer                go to state 119
    initializer_list           go to state 120
    designation                go to state 121
    designator_list            go to state 122
    designator                 go to state 123


state 51

   22 unary_operator: '&' .

    $default  reduce using rule 22 (unary_operator)


state 52

   26 unary_operator: '~' .

    $default  reduce using rule 26 (unary_operator)


state 53

    6 postfix_expression: primary_expression .

    $default  reduce using rule 6 (postfix_expression)


state 54

    7 postfix_expression: postfix_expression . '[' expression ']'
    8                   | postfix_expression . '(' ')'
    9                   | postfix_expression . '(' argument_expression_list ')'
   10                   | postfix_expression . '.' IDENTIFIER
   11                   | postfix_expression . INCREMENT
   12                   | postfix_expression . DECREMENT
   16 unary_expression: postfix_expression .

    INCREMENT  shift, and go to state 124
    DECREMENT  shift, and go to state 125
    '.'        shift, and go to state 126
    '('        shift, and go to state 127
    '['        shift, and go to state 128

    $default  reduce using rule 16 (unary_expression)


state 55

   28 cast_expression: unary_expression .
   61 assignment_expression: unary_expression . assignment_operator assignment_expression

    MUL_ASSIGN    shift, and go to state 129
    DIV_ASSIGN    shift, and go to state 130
    MOD_ASSIGN    shift, and go to state 131
    ADD_ASSIGN    shift, and go to state 132
    SUB_ASSIGN    shift, and go to state 133
    LEFT_ASSIGN   shift, and go to state 134
    RIGHT_ASSIGN  shift, and go to state 135
    AND_ASSIGN    shift, and go to state 136
    XOR_ASSIGN    shift, and go to state 137
    OR_ASSIGN     shift, and go to state 138
    '='           shift, and go to state 139

    $default  reduce using rule 28 (cast_expression)

    assignment_operator  go to state 140


state 56

   19 unary_expression: unary_operator . cast_expression
